fix: delete card overlay color in dark mode

--- a/src/app/modules/deleted-notes-list/deleted-note/deleted-note.component.scss
+++ b/src/app/modules/deleted-notes-list/deleted-note/deleted-note.component.scss
@@ -86,7 +86,7 @@
   }
 
   .overlay {
-    background: rgba(255, 255, 255, 0.90);
+    background: var(--background-color);
     position: absolute;
     top: 0;
     left: 0;
@@ -96,6 +96,8 @@
     align-items: center;
     justify-content: center;
     transform: scale(0);
+    border-radius: 5px;
+    opacity: 0.9;
 
     &.enabled {
       transform: scale(1);
